# learn-gpt2

./: .gitignore  AGENTS.md  README.md  pyproject.toml
guides/: 00_overview.md  01_setup.md  02_config.md  03_tokenizer.md  04_gelu.md  05_layernorm.md  06_causal_attention.md  07_mlp.md  08_block.md  09_model_forward.md  10_lm_loss.md  11_lr_schedule.md  12_training_loop.md  13_generation.md  14_further_reading.md
scripts/: generate.py  train.py
src/gpt2/: __init__.py  config.py  generate.py  model.py  tokenizer.py  train.py
tests/: conftest.py
tests/component/: test_block.py  test_generate.py  test_model_forward.py
tests/system/: test_training_smoke.py
tests/unit/: test_attention.py  test_config.py  test_gelu.py  test_layernorm.py  test_mlp.py  test_tokenizer.py
